--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "bugs": {
     "url": "https://github.com/wosevision/scoopr/issues"
   },
-  "homepage": "https://github.com/wosevision/scoopr#readme"
+  "homepage": "https://github.com/wosevision/scoopr#readme",
+  "dependencies": {
+    "promise-retry": "^1.1.1",
+    "request": "^2.88.0",
+    "yargs": "^12.0.4"
+  }
 }
