--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "promise-retry": "^1.1.1",
     "request": "^2.88.0",
     "yargs": "^12.0.4"
+  },
+  "bin": {
+    "scoopr": "./index.js"
   }
 }
